--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @layer base {
+  *:focus {
+    outline: none !important;
+  }
+} */
+/* *:focus {
+  outline: none !important;
+} */
